src/objects/Channel_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CP_Rating__c</fullName>
        <label>CP Rating</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Type__c</fullName>
        <label>CP Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICP/IPC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partners</relationshipLabel>
        <relationshipName>Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_ID_1__c</fullName>
        <label>Primary Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_ID_2__c</fullName>
        <label>Email ID 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Maha_RERA_No__c</fullName>
        <label>Maha RERA No.</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No_2__c</fullName>
        <label>Mobile No. 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_No__c</fullName>
        <label>Office No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pan_Card_No__c</fullName>
        <label>Pan Card No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Person_Name__c</fullName>
        <label>Primary Contact Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xcelerate_ID__c</fullName>
        <label>Xcelerate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Channel Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Maha_RERA_No__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>